After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 742881 - Strings in galleries are not translated
Strings in galleries are not translated
Status: RESOLVED FIXED
Product: totem
Classification: Core
Component: Thumbnailer
3.14.x
Other All
: Normal minor
: ---
Assigned To: General Totem maintainer(s)
General Totem maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-01-13 20:08 UTC by Alexandre Franke
Modified: 2015-01-13 20:44 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Alexandre Franke 2015-01-13 20:08:24 UTC
When generating a gallery (-g option of totem-video-thumbnailer), strings are in English.
Comment 1 Bastien Nocera 2015-01-13 20:44:24 UTC
Fixed in gnome-3-8, and up. Thanks for reporting.