thumbnailer: Fix missing translation support

https://bugzilla.gnome.org/show_bug.cgi?id=742881